--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,7 +47,7 @@ jobs:
 
     # Add a prompt to ask the user whether to apply or destroy changes
     - name: Apply Terraform changes
-      run: terraform apply --auto-approve
+      run: terraform destroy --auto-approve
 
     - name: Clean up
       run: rm tfplan
